Finish FPGA chapter

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -242,6 +242,16 @@
     address = {2100 Logic Drive, San Jose, CA 95124, Vereinigte Staaten von Amerika}
 }
 
+@manual{hlsintro2019,
+    author = {{Xilinx, Inc.}},
+    title = {Introduction to FPGA Design with Vivado High-Level Synthesis},
+    year = 2019,
+    month = jan,
+    edition = {UG998 (v1.1)},
+    organization = {Xilinx, Inc.},
+    address = {2100 Logic Drive, San Jose, CA 95124, Vereinigte Staaten von Amerika}
+}
+
 @manual{ultrascalemem2019,
     author = {{Xilinx, Inc.}},
     title = {UltraScale Architecture Memory Resources -- User Guide},
@@ -318,6 +328,16 @@
     year = 2019,
     month = jun,
     edition = {DS962 (v1.1)},
+    organization = {Xilinx, Inc.},
+    address = {2100 Logic Drive, San Jose, CA 95124, Vereinigte Staaten von Amerika}
+}
+
+@manual{hls2019,
+    author = {{Xilinx, Inc.}},
+    title = {Vivado Design Suite User Guide -- High-Level Synthesis},
+    year = 2019,
+    month = jul,
+    edition = {UG902 (v2019.1)},
     organization = {Xilinx, Inc.},
     address = {2100 Logic Drive, San Jose, CA 95124, Vereinigte Staaten von Amerika}
 }
