--- a/glossar.tex
+++ b/glossar.tex
@@ -1,6 +1,7 @@
 \makeglossaries
 
 \newacronym{api}{API}{\textit{application programming interface}}
+\newacronym{alu}{ALU}{\textit{arithmetic logic unit}}
 \newacronym{apu}{APU}{\textit{accelerated processing unit}}
 \newacronym{clb}{CLB}{\textit{configurable logic block}}
 \newacronym{cmt}{CMT}{\textit{clock management tile}}
